infra/cluster/ingress-nginx-config-v1.yaml
apiVersion:  networking.k8s.io/v1
kind: Ingress
metadata:
  # name: ingress-svc /* used ingress-resource as this is name used on GKE */
  name: ingress-resource
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
    # nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: dev.pitchinclub.com
      http:
        paths: 
        - path: /resources/?(.*)
          pathType: Prefix
          backend:
            service:
              name: picblog-clusterip-svc
              port:
                number: 3000
        - path: /blog/page/?(.*)
          pathType: Prefix
          backend:
            service:
              name: picblog-clusterip-svc
              port:
                number: 3000
        # This path called by nextjs; the other picblog paths will not work without this           
        - path: /_next/?(.*) 
          pathType: Prefix
          backend:
            service:
              name: picblog-clusterip-svc
              port:
                number: 3000
    # This should be last as this accepts all paths
    - host: dev.pitchinclub.com
      http:
        paths: 
        - path: /
          pathType: Prefix
          backend:
            service:
              name: pic-clusterip-svc
              port:
                number: 80
