infra/cluster/ingress-nginx-new.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
    nginx.ingress.kubernetes.io/rewrite-target: /
  name: ingress-resource
spec:
  rules:
    - host: dev.pitchinclub.com
      http:
        paths:
        - path: /?(.*)
          pathType: Prefix
          backend:
            service: 
              name: picblog-clusterip-svc
              port:
                number: 3000
    # - host: dev.pitchinclub.com
    #   http:
    #     paths: 
    #     - path: /?(.*)
    #       pathType: Prefix
    #       backend:
    #         service:
    #           name: pic-clusterip-svc
    #           port:
    #             number: 80
  # This section is only required if TLS is to be enabled for the Ingress
  # tls:
  #     - hosts:
  #         - www.example.com
  #       secretName: example-tls
